Fix: Acomode overflow en service card para movil en la linea 7

--- a/custom_element_templates/service-card.scss
+++ b/custom_element_templates/service-card.scss
@@ -1,9 +1,12 @@
 .row .col .service-card-container {
   .vc_column-inner {
-    //overflow-x: scroll;
+    
     width: 100vw;
     margin: 0 0 -24px -7%;
     scroll-snap-type: x mandatory;
+    @media (max-width: &md) {
+      overflow-x: scroll;
+    }
     @media (min-width: $md) {
       width: 100%;
       margin: 0;
